--- a/src/SignClient/SignClient.csproj
+++ b/src/SignClient/SignClient.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.8" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.24.0" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
     <PackageReference Include="Refit" Version="5.2.4" />
   </ItemGroup>
 
